--- a/decidim-meetings/app/views/decidim/meetings/meetings/_form.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/meetings/_form.html.erb
@@ -18,7 +18,7 @@
   <p class="help-text"><%= t(".location_help") %></p>
 </div>
 
-<div class="field">
+<div class="field" id="address">
   <%= form.geocoding_field :address %>
   <p class="help-text"><%= t(".address_help") %></p>
 </div>
